2014-08-31  Yu-Jie Lin  <livibetter@gmail.com>
	* fix tag/release v0.2.0 to v2.0.0

2014-08-30  Yu-Jie Lin  <livibetter@gmail.com>
	* release v0.2.0

[FILES]
	* add: ChangeLog
	* add: NEWS
	* rename: CHANGES.mkd to docs/CHANGES-OLD.mkd

[bash/Makefile.am]
	* install as prefix/bin/td.bash

[lib/Makefile.am]
	* version-info: 1:0:0

[main.c]
	* print_help: add for help message
	* main: add -h option for help message
	* main: add -V option for version string