@@ -27,13 +27,13 @@ if test "x$enable_bash" != xno; then
   SCRIPT='@abs_top_builddir@/src/td.sh'
 
   SETUP=(source "$SCRIPT")
-  VIA='function calls'
+  VIA='Bash function calls'
   TD=(print_td)
 
   test_command
 
   SETUP=()
-  VIA='script executions'
+  VIA='Bash script executions'
   TD=("$SCRIPT")
 
   test_command
@@ -44,7 +44,7 @@ fi
 if test "x$enable_c" != xno; then
 
   SETUP=()
-  VIA='script executions'
+  VIA='command executions'
   TD=('@abs_top_builddir@/src/td')
 
   test_command
@@ -55,7 +55,7 @@ fi
 if test "x$enable_bash_loadable" != xno; then
 
   SETUP=('enable' '-f' '@abs_top_builddir@/bash/td' 'td')
-  VIA='Bash loadable execution'
+  VIA='Bash loadable executions'
   TD=('td')
 
   test_command
@@ -66,7 +66,7 @@ fi
 if test "x$enable_python2" != xno; then
 
   SETUP=()
-  VIA='script executions'
+  VIA='Python 2 script executions'
   TD=(python2 '@abs_top_builddir@/tests/testsuite.td.py')
 
   test_command
@@ -77,7 +77,7 @@ fi
 if test "x$enable_python3" != xno; then
 
   SETUP=()
-  VIA='script executions'
+  VIA='Python 3 script executions'
   TD=(python3 '@abs_top_builddir@/tests/testsuite.td.py')
 
   test_command
